2003-09-27  Matti Aarnio  <mea@zmailer.org>

	* configure.in:
	    Changed the  --without-ldap   to   --with-ldap
	    and worked a bit in other internal related things.

2003-09-26  Matti Aarnio  <mea@zmailer.org>

	* include/mail.h.in, libc/mail.c, libc/sfmail.c:
	    New variants of *mail_close*() functions, now
	    can control the asynchronity of the close()
	    thing.  Essentially controlling use of  fsync(2)
	    on outgoing spool file descriptor.

	* man/scheduler.8.in, proto/scheduler.conf.in,
	  scheduler/msgerror.c, scheduler/prototypes.h,
	  scheduler/readconfig.c, scheduler/scheduler.c:
	    Added  "PARAMmsgwriteasync = 1" option that
	    can control the asynchronity in mail.c/sfmail.c
	    library routines.

	 * transports/smtp/smtp.c, man/smtp.8.in:
	     From Andrey Blochintsev <bag@iptelecom.net.ua> an option
	     to allow connection to IP addresses of the same host.

2003-09-25  Matti Aarnio  <mea@zmailer.org>

	* configure.in, router/db.c, router/libdb/gdbm.c,
	  router/libdb/ldap.c:
	    - A bunch of "--without-*" things:
	    	    --without-ndbm
		    --without-gdbm
		    --without-ldap
	      To disable some autodetections.
	    - Removed traces of SDBM autoconfig;
	      a once-upon-a-time replacement for NDBM.

	* smtpserver/smtpcmds.c:
	    When reporting various rejections, do report also
	    peer IP address.  This to help some analysis, and
	    to some extent, to help users.

	* configure.in:
	    - Default builtin value for SCHEDULEROPTIONS is
	      now changed to  "-S -H".
	    - Fixed a missing comma from  --with-perl-installdirs
	      option parameter processing.
	    - Added some AC_MSG_RESULT()s about NDBM library
	      pickup processing.

	* proto/cf/fqdnaliases.cf:
	    One instance of  $(listexpand .. ) call needed
	    "-N -" parameter as not to do DSN expansions.

	* proto/forms/delivery
	    - Added "ADR Bcc: <nobody>" to drain  errors-on-error
	      reports.
	    - Made small URL change

	* utils/perl/Makefile.in: